j ai ajouté des variables et défini des tailles fixes pour les différents titres, la home contient plus de section, j ai modif le svg des catégories et le display des tuto

--- a/app/assets/stylesheets/_variables.scss
+++ b/app/assets/stylesheets/_variables.scss
@@ -13,12 +13,17 @@ $menu-background-hover: #d4d4d4;
 $footer-1: #38a7c9;
 $footer-2: #2496c6;
 
-$grey-background: #f8f8f8;
+$grey-background: #fafafa;
 $grey-background-2: #f5f6fa;
 
 $color-twitter: #28a9e0;
 $color-facebook: #3b5998;
 $color-linkedin: #0177b5;
+
+/******* GRADIENT ********/
+
+$green-gradient: linear-gradient(45deg, #75AD31 0%, #3EA581 94%);
+$blue-gradient: linear-gradient(-135deg, #38A7C9 0%, #3864C9 100%);
 
 /******* SHADOWS ********/
 
