--- a/app/assets/stylesheets/layout/footer.scss
+++ b/app/assets/stylesheets/layout/footer.scss
@@ -1,5 +1,5 @@
 #footer {
-  background: $footer-1;
+  background: $blue-gradient;
   color: #fff;
   padding: 70px 0 50px 0;
 
@@ -17,18 +17,12 @@
 
   h5 {
     font-weight: bold;
-    font-size: 16px;
     margin: 0 0 25px 0;
-  }
-
-  p {
-    font-size: 16px;
   }
 }
 
 .footer-social {
   p {
-    font-size: 16px;
     font-weight: bold;
     margin: 0 0 25px 0;
   }
