--- a/app/views/home/_svg.html.erb
+++ b/app/views/home/_svg.html.erb
@@ -5,7 +5,22 @@
   .st1{opacity:0.251;}
   .st2{fill:#FFFFFF;}
   .st3{fill:#FFFFFF;stroke:#FFFFFF;stroke-width:0.0369;stroke-miterlimit:10;}
+  .st4{fill:none;stroke:#FAFAFA;stroke-width:18;stroke-miterlimit:10;}
 </style>
+<g id="Calque_2">
+  
+    <rect x="39.8" y="44.4" transform="matrix(0.7071 -0.7071 0.7071 0.7071 -43.2177 97.9122)" class="st4" width="113.5" height="113.5"/>
+  
+    <rect x="201.8" y="44.4" transform="matrix(0.7071 -0.7071 0.7071 0.7071 4.2299 212.463)" class="st4" width="113.5" height="113.5"/>
+  
+    <rect x="363.8" y="44.4" transform="matrix(0.7071 -0.7071 0.7071 0.7071 51.6776 327.0139)" class="st4" width="113.5" height="113.5"/>
+  
+    <rect x="525.8" y="44.4" transform="matrix(0.7071 -0.7071 0.7071 0.7071 99.125 441.5648)" class="st4" width="113.5" height="113.5"/>
+  
+    <rect x="201.8" y="206.4" transform="matrix(0.7071 -0.7071 0.7071 0.7071 -110.3211 259.9107)" class="st4" width="113.5" height="113.5"/>
+  
+    <rect x="363.8" y="206.4" transform="matrix(0.7071 -0.7071 0.7071 0.7071 -62.8733 374.4615)" class="st4" width="113.5" height="113.5"/>
+</g>
 <g id="catégories_1_">
   <a xlink:href="<%= category_path('peinture-colles') %>"><g id="peinture__x26__colles_1_">
     <g id="img_17_">
