--- a/app/assets/stylesheets/pages/home.scss
+++ b/app/assets/stylesheets/pages/home.scss
@@ -2,28 +2,26 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
-.home-title-section {
-  color: #1c1833;
-  font-size: 40px;
-}
-.home-p-section {
-  color: #1c1833;
-  font-size: 16px;
-}
+
 
 .grey-bar-title {
   background-color: #c9c9c9;
-  height: 3px;
-  width: 30px;
-  margin: 28px auto 45px auto;
+  height: 4px;
+  width: 50px;
+  margin: 20px auto 45px auto;
+}
+
+.owl-wrapper-outer{
+  overflow: visible !important;
 }
 
 .jumbotron{
   padding-top:120px;
   margin: 0;
-  height: 80vh;
+  height: 70vh;
   background-image: image_url('slider.jpg');
   background-size: cover;
+  filter: blur(2px);
 
   .container{
     text-align: center;
@@ -49,9 +47,21 @@
         height: 60px;
         width: 60px;
         vertical-align: top;
-        margin-left: -2px;
+        margin-left: -4px;
+        padding: 0;
       }
     }
+  }
+}
+
+.materials-home{
+  text-align: center;
+  padding: 60px 0 170px;
+
+  img{
+    position: absolute;
+    left: 42%;
+    margin-top: 15px;
   }
 }
 
@@ -96,6 +106,8 @@
 }
 
 .categories-home {
+  background: $grey-background;
+
   svg{
     margin-top:-150px;
   }
@@ -103,9 +115,10 @@
 
 .tutoriels-home {
   padding: 70px 0;
+  background: $grey-background;
 
   #owl-tutoriels {
-    padding: 90px 0 100px 0;
+    padding:40px 0 100px 0;
   }
 
   .tutoriel {
@@ -113,31 +126,41 @@
     background-color: #f6f6f6;
     /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#f6f6f6+0,f6f6f6+50,f2f0f1+50,f2f0f1+100 */
     background: #f6f6f6; /* Old browsers */
-    background: -moz-linear-gradient(-45deg, #f6f6f6 0%, #f6f6f6 50%, #f2f0f1 50%, #f2f0f1 100%); /* FF3.6-15 */
-    background: -webkit-linear-gradient(-45deg, #f6f6f6 0%,#f6f6f6 50%,#f2f0f1 50%,#f2f0f1 100%); /* Chrome10-25,Safari5.1-6 */
-    background: linear-gradient(135deg, #f6f6f6 0%,#f6f6f6 50%,#f2f0f1 50%,#f2f0f1 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#f6f6f6', endColorstr='#f2f0f1',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
-  
-    h2 {
+    background: -moz-linear-gradient(-45deg, #fff 0%, #fff 50%, #FDFDFD 50%, #FDFDFD 100%); /* FF3.6-15 */
+    background: -webkit-linear-gradient(-45deg, #fff 0%, #fff 50%, #FDFDFD 50%, #FDFDFD 100%); /* Chrome10-25,Safari5.1-6 */
+    background: linear-gradient(135deg, #fff 0%,#fff 50%, #FDFDFD 50%, #FDFDFD 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fff', endColorstr='#FDFDFD',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
+    box-shadow: $shadow;
+
+    h3{
       font-size: 18px;
-      font-weight: bold;
       margin: 0 0 35px 0;
       text-transform: capitalize;
     }
 
-    p {
-      font-size: 16px;
-    }
-
     .lien-plus {
-      font-size: 50px;
-      font-weight: 300;
-      height: 70px;
-      width: 70px;
-      border: 5px solid #c9c9c9;
-      border-radius: 50%;
+      height: 55px;
+      width: 40%;
+      border: 4px solid #EFEEEE;
+      border-radius: 35px;
+      margin: auto;
+      position: absolute;
+      left: 30%;
+      bottom: -27px;
+      display: table;
+      background: #fff;
+
+      span{
+        display: table-cell;
+        vertical-align: middle;
+      }
     }
   }
+}
+
+.howItWork-home{
+  height:330px;
+  background: $green-gradient;
 }
 
 .articles-home {
@@ -159,7 +182,7 @@
     .info-article {
       padding: 20px 20px 30px 20px;
 
-      h2 {
+      h3 {
         font-weight: bold;
         font-size: 18px;
         margin: 0 0 30px 0;
@@ -167,7 +190,6 @@
       }
 
       p {
-        font-size: 16px;
         margin: 0 0 30px 0;
       }
 
