--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -28,6 +28,7 @@
 @import "pages/home";
 @import "pages/category";
 @import "pages/product";
+@import "pages/search";
 
 body {
   padding-top: 60px;
