affiche un tuto

--- a/app/views/tutorials/index.html.erb
+++ b/app/views/tutorials/index.html.erb
@@ -1,4 +1,8 @@
 index.html.erb
 <% @tutorials.each do |tutorial| %>
-	<p><%= tutorial.title %></p>
+	<p>
+		<% link_to tutorial_path(tutorial.slug) do %>
+			<%= tutorial.title %>
+		<% end %>
+	</p>
 <% end %>
