ajout d'un slug dans la factories du tutoriel

--- a/app/views/tutorials/index.html.erb
+++ b/app/views/tutorials/index.html.erb
@@ -1,7 +1,7 @@
 index.html.erb
 <% @tutorials.each do |tutorial| %>
 	<p>
-		<% link_to tutorial_path(tutorial.slug) do %>
+		<%= link_to tutorial_path(tutorial.slug) do %>
 			<%= tutorial.title %>
 		<% end %>
 	</p>
