ajout d'un lien vers tous les tutoriels sur la home

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -86,13 +86,13 @@
               <h3>Titre tutoriel</h3>
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
               <a href="#" class="lien-plus">
-                  <span>voir tous le tuto</span>
+                  <span>voir le tutoriel</span>
               </a>
             </div>
           </div>
         <% end %>
       </div>
-      <a href="" class="btn-default">Tous les tutoriels</a>
+      <%= link_to "Tous les tutoriels", tutorials_path, class: 'btn-default' %>
     </div>
   </div>
 </section>
