refactoring de la view tutorial

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -82,13 +82,7 @@
       <div id="owl-tutoriels" class="owl-carousel row">
         <% (0..3).each do |i| %>
           <div class="col-md-24">
-            <div class="tutoriel">
-              <h3>Titre tutoriel</h3>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-              <a href="#" class="lien-plus">
-                  <span>voir le tutoriel</span>
-              </a>
-            </div>
+            <%= render "shared/tutorial_block" %>
           </div>
         <% end %>
       </div>
