--- a/app/views/home/_svg2.html.erb
+++ b/app/views/home/_svg2.html.erb
@@ -175,7 +175,7 @@ viewBox="0 0 678.1 361" style="enable-background:new 0 0 678.1 361;" xml:space="
     </a>
 </g>
 <g id="éco_d_x27_énergie_1_">
-    <a xlink:href="<%= category_path('economie-energie') %>">
+    <a xlink:href="<%= category_path('systeme-economie-energie') %>">
         <g id="img_15_">
             <g id="Rectangle_31__x2B__Rectangle_28_copie_5_6_" class="st1">
                 <g>
@@ -490,7 +490,7 @@ viewBox="0 0 678.1 361" style="enable-background:new 0 0 678.1 361;" xml:space="
     </a>
 </g>
 <g id="Prod_énergie_verte_1_">
-    <a xlink:href="<%= category_path('production-energie') %>">
+    <a xlink:href="<%= category_path('production-energie-verte') %>">
         <g id="img_11_">
             <g id="Rectangle_31__x2B__Rectangle_28_copie_5_14_" class="st1">
                 <g>
