affiche les données de la bdd pour les tutoriels et ajouts des liens vers ces derniers

--- a/app/views/shared/_tutorial_block.html.erb
+++ b/app/views/shared/_tutorial_block.html.erb
@@ -1,9 +1,9 @@
 <div class="tutoriel">
-  <h3>Titre tutoriel</h3>
+  <h3><%= tutorial.title %></h3>
   <p>
-  	Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+  	<%= tutorial.resume %>
   </p>
-  <a href="#" class="lien-plus">
+  <%= link_to tutorial_path(tutorial.slug), class: "lien-plus" do %>
     <span>voir le tutoriel</span>
-  </a>
+  <% end %>
 </div>
