--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -80,9 +80,9 @@
   <div class="row">
     <div class="col-md-24">
       <div id="owl-tutoriels" class="owl-carousel row">
-        <% (0..3).each do |i| %>
+        <% @tutorials.each do |tutorial| %>
           <div class="col-md-24">
-            <%= render "shared/tutorial_block" %>
+            <%= render "shared/tutorial_block", tutorial: tutorial %>
           </div>
         <% end %>
       </div>
