--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -25,4 +25,25 @@
       <% end %>
     </div>
   </div>
+  <div class="row">
+    <div class="col-xs-24 col-md-22 col-md-offset-1">
+      <div class="col-xs-24">
+        <nav>
+          <ul class="pagination">
+            <li class="disabled">
+              <a href="#" aria-label="Previous">
+                <span aria-hidden="true">&laquo;</span>
+              </a>
+            </li>
+            <li class="active"><a href="#">1 <span class="sr-only">(current)</span></a></li>
+            <li class="disabled">
+              <a href="#" aria-label="Next">
+                <span aria-hidden="true">&raquo;</span>
+              </a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </div>
 </div>
