corrige validation du model User et supprime fichier svg inutile

--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -12,7 +12,7 @@
     <div class="row">
       <div class="col-md-24 hidden-xs">
         <!-- SVG catégories -->
-        <%= render 'svg2'%>
+        <%= render 'svg'%>
       </div>
       <div class="visible-xs-24 visible-xs-block">
         <div class="row">
