interdit l'indexation du Back-office et ajout de methode pour Tutorials

--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -12,6 +12,9 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
 
+  <meta name="robots" content="noindex">
+  <meta name="googlebot" content="noindex">
+
   <%= stylesheet_link_tag    'admin', media: 'all' %>
   <%= javascript_include_tag 'admin' %>
   <%= csrf_meta_tags %>
