modifie style du back-office

--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -1,6 +1,70 @@
-<h1>Dashboard</h1>
-
-<ul>
-  <li>Manage Users</li>
-  <li>Manage Articles</li>
-</ul>
+<div class="content-heading">
+   Dashboard
+   <small data-localize="dashboard.WELCOME"></small>
+</div>
+<!-- START widgets box-->
+<div class="row">
+   <div class="col-lg-3 col-sm-6">
+      <!-- START widget-->
+      <div class="panel widget bg-primary">
+         <div class="row row-table">
+            <div class="col-xs-4 text-center bg-primary-dark pv-lg">
+               <em class="fa fa-cube fa-3x"></em>
+            </div>
+            <div class="col-xs-8 pv-lg">
+               <div class="h2 mt0">1500</div>
+               <div class="text-uppercase">produits</div>
+            </div>
+         </div>
+      </div>
+   </div>
+   <div class="col-lg-3 col-sm-6">
+      <!-- START widget-->
+      <div class="panel widget bg-purple">
+         <div class="row row-table">
+            <div class="col-xs-4 text-center bg-purple-dark pv-lg">
+               <em class="icon-basket-loaded fa-3x"></em>
+            </div>
+            <div class="col-xs-8 pv-lg">
+               <div class="h2 mt0">12</div>
+               <div class="text-uppercase">commandes</div>
+            </div>
+         </div>
+      </div>
+   </div>
+   <div class="col-lg-3 col-md-6 col-sm-12">
+      <!-- START widget-->
+      <div class="panel widget bg-green">
+         <div class="row row-table">
+            <div class="col-xs-4 text-center bg-green-dark pv-lg">
+               <em class="icon-bubbles fa-3x"></em>
+            </div>
+            <div class="col-xs-8 pv-lg">
+               <div class="h2 mt0">32</div>
+               <div class="text-uppercase">Commentaires</div>
+            </div>
+         </div>
+      </div>
+   </div>
+   <div class="col-lg-3 col-md-6 col-sm-12">
+      <!-- START date widget-->
+      <div class="panel widget">
+         <div class="row row-table">
+            <div class="col-xs-4 text-center bg-green pv-lg">
+               <!-- See formats: https://docs.angularjs.org/api/ng/filter/date-->
+               <div data-now="" data-format="MMMM" class="text-sm"></div>
+               <br/>
+               <div data-now="" data-format="D" class="h2 mt0"></div>
+            </div>
+            <div class="col-xs-8 pv-lg">
+               <div data-now="" data-format="dddd" class="text-uppercase"></div>
+               <br/>
+               <div data-now="" data-format="h:mm" class="h2 mt0"></div>
+               <div data-now="" data-format="a" class="text-muted text-sm"></div>
+            </div>
+         </div>
+      </div>
+      <!-- END date widget    -->
+   </div>
+</div>
+<!-- END widgets box-->
