ajout du controller users et orders + revue de style du Back-office

--- a/app/views/admin/dashboard/index.html.erb
+++ b/app/views/admin/dashboard/index.html.erb
@@ -12,7 +12,7 @@
                <em class="fa fa-cube fa-3x"></em>
             </div>
             <div class="col-xs-8 pv-lg">
-               <div class="h2 mt0">1500</div>
+               <div class="h2 mt0"><%= @number_products %></div>
                <div class="text-uppercase">produits</div>
             </div>
          </div>
@@ -26,7 +26,7 @@
                <em class="icon-basket-loaded fa-3x"></em>
             </div>
             <div class="col-xs-8 pv-lg">
-               <div class="h2 mt0">12</div>
+               <div class="h2 mt0"><%= @number_orders %></div>
                <div class="text-uppercase">commandes</div>
             </div>
          </div>
