--- a/app/views/layouts/partials/_topnavbar.html.erb
+++ b/app/views/layouts/partials/_topnavbar.html.erb
@@ -117,9 +117,9 @@
          <!-- END Alert menu-->
          <!-- START Contacts button-->
          <li>
-            <a href="#" data-toggle-state="offsidebar-open" data-no-persist="true">
-               <em class="icon-notebook"></em>
-            </a>
+            <%= link_to root_path do %>
+              <em class="fa fa-sign-out"></em>
+            <% end %>
          </li>
          <!-- END Contacts menu-->
       </ul>
