revue de style du back-office

--- a/app/views/layouts/partials/_sidebar.html.erb
+++ b/app/views/layouts/partials/_sidebar.html.erb
@@ -46,6 +46,12 @@
                <span data-localize="sidebar.nav.WIDGETS">Commandes</span>
             <% end %>
          </li>
+         <li class="<%= 'active' if controller.controller_name == 'documentation' && controller.action_name == 'index' %>">
+            <a href="/documentation" title="Documentation">
+               <em class="fa fa-cubes"></em>
+               <span data-localize="sidebar.nav.DOCUMENTATION">Stock</span>
+            </a>
+         </li>
          <li class="<%= 'active' if controller.controller_name == 'tutorials' %>">
             <%= link_to admin_tutorials_path do %>
               <em class="icon-book-open"></em>
