n'affiche pas le header et le footer pour les page de devise

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,9 +18,13 @@
   <%= favicon_link_tag 'favicon.png' %>
 </head>
 <body>
-  <%= render 'layouts/header'%>
+  <% if !devise_controller? %>
+    <%= render 'layouts/header'%>
+  <% end %>
   <%= yield %>
-  <%= render 'layouts/footer'%>
+  <% if !devise_controller? %>
+    <%= render 'layouts/footer'%>
+  <% end %>
 
   <script type="text/javascript">
   (function() {
