--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -70,10 +70,10 @@
                 <td class="text-center">
                   <%= link_to edit_admin_user_path(user.id), class: 'btn btn-sm btn-default' do %>
                       <em class="icon-pencil"></em>
-                   <% end %>
-                   <button type="button" class="btn btn-sm btn-default">
+                  <% end %>
+                  <%= link_to admin_user_path(user.id), :class => "btn btn-sm btn-default", :id => "delete-user-#{user.id}", :method => :delete,  :data => {:confirm => 'Êtes-vous sûr ?' } do %>
                       <em class="icon-trash"></em>
-                   </button>
+                  <% end %>
                 </td>
             </tr>
           <% end %>
