ameliore les tests et les models

--- a/app/views/admin/users/edit.html.erb
+++ b/app/views/admin/users/edit.html.erb
@@ -28,7 +28,7 @@
               <div class="form-group">
                 <%= f.label :role, class: 'col-sm-2 control-label' %>
                 <div class="col-sm-10">
-                  <%= f.select :role, [['Client', 'customer'], ['Marchand', 'merchant'], ['Administrateur', 'admin']], {}, { :class => "form-control m-b" } %>
+                  <%= f.select :role, [['Client', 'Customer'], ['Marchand', 'Merchant'], ['Administrateur', 'Admin']], {}, { :class => "form-control m-b" } %>
                   <br>
                 </div>
               </div>
