--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -65,7 +65,7 @@
                </td>
                <td><%= user.id %></td>
                <td><%= user.email %></td>
-               <td><%= user.role %></td>
+               <td><%= user.role_name %></td>
                <td>1 week</td>       
                 <td class="text-center">
                   <%= link_to edit_admin_user_path(user.id), class: 'btn btn-sm btn-default' do %>
