--- a/app/views/layouts/partials/_sidebar.html.erb
+++ b/app/views/layouts/partials/_sidebar.html.erb
@@ -17,7 +17,7 @@
                   <!-- Name and Job-->
                   <div class="user-block-info">
                      <span class="user-block-name">Hello, <%= current_user.email %></span>
-                     <span class="user-block-role"><%= current_user.role %></span>
+                     <span class="user-block-role"><%= current_user.role_name %></span>
                   </div>
                </div>
             </div>
