--- a/app/views/admin/merchants/index.html.erb
+++ b/app/views/admin/merchants/index.html.erb
@@ -1,1 +1,119 @@
 <h3>Marchands</h3>
+
+<div class="panel panel-default">
+  <div class="panel-heading">
+     <div class="row">
+      <div class="col-xs-12">
+        <%= link_to 'Ajouter un marchand', new_admin_merchant_path, class: 'mb-sm btn btn-primary' %>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-2">
+        <div class="input-group pull-right">
+          <select class="input-sm form-control">
+            <option value="0">Bulk action</option>
+            <option value="1">Delete</option>
+            <option value="2">Clone</option>
+            <option value="3">Export</option>
+          </select>
+          <span class="input-group-btn">
+            <button class="btn btn-sm btn-default">Apply</button>
+          </span>
+        </div>
+      </div>
+      <div class="col-lg-6"></div>
+      <div class="col-lg-4">
+        <div class="input-group">
+          <input type="text" placeholder="Search" class="input-sm form-control" />
+          <span class="input-group-btn">
+            <button type="button" class="btn btn-sm btn-default">Search</button>
+          </span>
+        </div>
+      </div>
+    </div>
+  </div>
+   <!-- START table-responsive-->
+   <div class="table-responsive">
+      <table id="table-ext-2" class="table table-striped table-bordered table-hover">
+         <thead>
+            <tr>
+               <th data-check-all="data-check-all">
+                  <div data-toggle="tooltip" data-title="Check All" class="checkbox c-checkbox">
+                     <label>
+                        <input type="checkbox" />
+                        <span class="fa fa-check"></span>
+                     </label>
+                  </div>
+               </th>
+               <th>Description</th>
+               <th>Action</th>
+            </tr>
+         </thead>
+         <tbody>
+          <% @merchants.each do |merchant| %>
+            <tr>
+               <td>
+                  <div class="checkbox c-checkbox">
+                     <label>
+                        <input type="checkbox" />
+                        <span class="fa fa-check"></span>
+                     </label>
+                  </div>
+               </td>
+               <td>
+                  <div class="media">
+                     <div class="pull-left">
+                        <img src="<%= image_path('angle/user/01.jpg') %>" alt="" class="media-object img-responsive img-circle" />
+                     </div>
+                     <div class="media-body">
+                      <div class="pull-right badge baed-info"><%= merchant.id %></div>
+                        <h4 class="media-heading"><%= merchant.name %></h4>
+                        <%= merchant.description %>
+                      </div>
+                  </div>
+               </td>
+               <td class="text-center">
+                  <%= link_to edit_admin_merchant_path(merchant.id), class: 'btn btn-sm btn-default' do %>
+                      <em class="icon-pencil"></em>
+                  <% end %>
+                  <%= link_to admin_merchant_path(merchant.id), :class => "btn btn-sm btn-default", :id => "delete-merchant-#{merchant.id}", :method => :delete,  :data => {:confirm => 'Êtes-vous sûr ?' } do %>
+                      <em class="icon-trash"></em>
+                  <% end %>
+               </td>
+            </tr>
+            <% end %>
+         </tbody>
+      </table>
+   </div>
+   <!-- END table-responsive-->
+   <div class="panel-footer">
+      <div class="row">
+         <div class="col-lg-2">
+            <div class="input-group pull-right">
+               <select class="input-sm form-control">
+                  <option value="0">Bulk action</option>
+                  <option value="1">Delete</option>
+                  <option value="2">Clone</option>
+                  <option value="3">Export</option>
+               </select>
+               <span class="input-group-btn">
+                  <button class="btn btn-sm btn-default">Apply</button>
+               </span>
+            </div>
+         </div>
+         <div class="col-lg-8"></div>
+         <div class="col-lg-2 text-right">
+            <ul class="pagination pagination-sm">
+               <li class="active"><a href="#">1</a>
+               </li>
+               <li><a href="#">2</a>
+               </li>
+               <li><a href="#">3</a>
+               </li>
+               <li><a href="#">»</a>
+               </li>
+            </ul>
+         </div>
+      </div>
+   </div>
+</div>
