--- a/app/views/admin/products/index.html.erb
+++ b/app/views/admin/products/index.html.erb
@@ -1,6 +1,46 @@
 <h3>Produits</h3>
 
-<% @products.each do |product| %>
-  <%= product.id %>
-  <%= product.name %>
-<% end %>
+<div class="table-responsive b0">
+   <table id="datatable1" class="table table-striped table-hover">
+      <thead>
+         <tr>
+            <th style="width:80px">
+               <strong>ID</strong>
+            </th>
+            <th>
+               <strong>IMAGE</strong>
+            </th>
+            <th>
+               <strong>NOM</strong>
+            </th>
+            <th>
+               <strong>DESCRIPTION</strong>
+            </th>
+            <th class="text-center">
+               <strong>ACTIVE</strong>
+            </th>
+            <th class="text-center">
+               <strong>ACTION</strong>
+            </th>
+         </tr>
+      </thead>
+      <tbody>
+        <% @products.each do |product| %>
+         <tr>
+            <td><%= product.id %></td>
+            <td></td>
+            <td><%= product.name %></td>
+            <td><%= product.description.first(150) %>...</td>
+            <td class="text-center">
+               <span class="label label-success">oui</span>
+            </td>
+            <td class="text-center">
+               <button type="button" class="btn btn-sm btn-default">
+                  <em class="icon-pencil"></em>
+               </button>
+            </td>
+         </tr>
+         <% end %>
+      </tbody>
+   </table>
+</div>
