--- a/app/assets/stylesheets/layout/header.scss
+++ b/app/assets/stylesheets/layout/header.scss
@@ -8,84 +8,35 @@ header {
     height: 100%;
   }
 
-  #menu {
-    text-transform: uppercase;
-    cursor: pointer;
-    width: 100%;
-
-    a {
-      padding: 15px 0;
-    }
-
-    .menu-icon{
-      transition: transform 0.5s;
-      position: absolute;
-      top: 50%;
-      left: 50px;
-      transform: translate(0px, -50%);
-
-      &.is-opened span { background: transparent; }
-      &.is-opened span::before { transform: translateY(0) rotate(45deg); }
-      &.is-opened span::after { transform: translateY(0) rotate(-45deg); }
-      
-      span {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translateX(-50%) translateY(-50%); 
-
-        display: block;
-        width: 22px;
-        height: 2px;
-
-        background-color: #fff;
-        transition: background 0.5s;
-
-        &::before, &::after {
-          content: '';
-          position: absolute;
-          top: 0;
-          left: 0;
-          transform: translateY(-6px);
-
-          display: block;
-          width: 22px;
-          height: 2px;
-
-          background-color: #fff;
-          transition: transform 0.5s;
-        }
-        &::after {
-          transform: translateY(6px); 
-        }
-      }
-    }
-
-    & div:nth-child(2) {
-      padding: 0 70px 0 90px;
-      border-right: #bad698 1px solid;
-      text-align: center;
-    }
-  }
+  
 
   .nav {
     font-size: 16px;
+    float: right;
+
+    li > a{
+      text-shadow: none;
+
+      i{
+        padding-right: 7px;
+      }
+    }
   }
 
   .searchbox {
     position:relative;
     min-width:50px;
-    width:0%;
     height:50px;
     float:left;
     overflow:hidden;
     color: #fff;
-    
     -webkit-transition: width 0.3s;
     -moz-transition: width 0.3s;
     -ms-transition: width 0.3s;
     -o-transition: width 0.3s;
     transition: width 0.3s;
+    border-left:1px solid rgba(255,255,255,0.1);
+    border-right:1px solid rgba(255,255,255,0.1);
   }
 
   .searchbox-input{
@@ -120,7 +71,6 @@ header {
     display:block;
     position:absolute;
     top:0;
-    font-size:22px;
     left:0;
     padding:0;
     margin:0;
@@ -149,21 +99,61 @@ header {
   }
 
   .menu-categories {
-    display: none;
     background-color: $menu-background;
-    width: 350px;
+    width: 100%;
     max-width: 100%;
     position: fixed;
     top: 50px;
-    left: -350px;
     z-index: 900000;
+    left:0;
+    text-align: center;
+    box-shadow: $shadow;
 
     a {
       color: $text-color;
     }
   }
 
-  .primary-category, .secondary-category div{
+  .categories{
+    padding: 0;
+    margin: 0;
+    display: inline-block;
+
+    .primary-category{
+      display: inline-block;
+      padding:15px 0;
+
+      a{
+        padding:0 15px;
+      }
+
+      &:hover{
+        background:#fff;
+      }
+
+      >ul{
+        display: none;
+        position: absolute;
+        top: 52px;
+        background: #F2F0F0;
+        padding: 20px;
+        width: 201px;
+        text-align: left;
+        list-style: none;
+        background: #fff;
+        line-height: 30px;
+      }
+
+      &:hover{
+        cursor: pointer;
+        >ul{
+        display: block;
+        }
+      }
+    }
+  }
+
+  .secondary-category div{
     border-bottom: 1px solid #aaa;
     font-size: 18px;
     line-height: 18px;
@@ -172,24 +162,6 @@ header {
 
     &:hover, &:active {
       background-color: $menu-background-hover;
-    }
-  }
-
-  .primary-category {
-    padding: 20px 65px;
-
-    i {
-      position: absolute;
-      top: 50%;
-      right: 20px;
-      transform: translate(0px, -50%);
-    }
-
-    img {
-      position: absolute;
-      top: 50%;
-      left: 20px;
-      transform: translate(0px, -50%);
     }
   }
 
