--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -90,7 +90,53 @@
     </div>
   </div>
 </section>
-<section class="howItWork-home">
+<section class="howItWork-home text-center">
+  
+    <h2 class="home-title-section">Comment ça marche</h2>
+    <div class="grey-bar-title"></div>
+    <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+        <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+      </ol>
+      <div class="carousel-inner" role="listbox">
+        <div class="item active">
+          <div class="row">
+            <div class="col-md-14">
+              <%= image_tag("ccm1.png") %>
+            </div>
+            <div class="item-description col-md-10">
+              <h3>Lorem ipsum</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin porttitor hendrerit est id auctor. Cras quis sagittis arcu. Pellentesque vitae blandit diam. Mauris lacinia tincidunt purus, quis posuere metus. Donec tincidunt lacus vel est </p>
+            </div>
+          </div>
+        </div>
+        <div class="item ">
+          <div class="row">
+            <div class="col-md-14">
+              <%= image_tag("ccm1.png") %>
+            </div>
+            <div class="item-description col-md-10">
+              <h3>Lorem ipsum</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin porttitor hendrerit est id auctor. Cras quis sagittis arcu. Pellentesque vitae blandit diam. Mauris lacinia tincidunt purus, quis posuere metus. Donec tincidunt lacus vel est </p>
+            </div>
+          </div>
+        </div>
+        <div class="item ">
+          <div class="row">
+            <div class="col-md-14">
+              <%= image_tag("ccm1.png") %>
+            </div>
+            <div class="item-description col-md-10">
+              <h3>Lorem ipsum</h3>
+              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin porttitor hendrerit est id auctor. Cras quis sagittis arcu. Pellentesque vitae blandit diam. Mauris lacinia tincidunt purus, quis posuere metus. Donec tincidunt lacus vel est </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  
 </section>
 <section class="articles-home container-fluid text-center">
   <div class="row">
