--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,5 +33,8 @@
 	  slider();
 	}());
   </script>
+  <script type="text/javascript">
+    $('.carousel').carousel()
+  </script>
 </body>
 </html>
