--- a/app/assets/stylesheets/_mixin.scss
+++ b/app/assets/stylesheets/_mixin.scss
@@ -18,8 +18,8 @@
   @include border-radius(5px);
 }
 
-@mixin button-default($color, $color-hover) {
-  background-color: $color;
+@mixin button-default($green-gradient, $color-hover) {
+  background: $green-gradient;
   background-image: none;
   text-shadow: none;
   border-radius: 5px;
