--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>Climateriaux</title>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 
   <!-- Chrome, Firefox OS and Opera -->
   <meta name="theme-color" content="#75ad31">
@@ -12,10 +12,9 @@
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
   
-  <%= stylesheet_link_tag    'application', media: 'all' %>
-  <%= javascript_include_tag 'application' %>
-  <%= csrf_meta_tags %>
+  <%= stylesheet_link_tag 'application', media: 'all' %>
   <%= favicon_link_tag 'favicon.png' %>
+  <%= csrf_meta_tags %>
 </head>
 <body>
   <% if !devise_controller? %>
@@ -26,12 +25,6 @@
     <%= render 'layouts/footer'%>
   <% end %>
 
-  <script type="text/javascript">
-  (function() {
-	  menu();
-	  searchbar();
-	  slider();
-	}());
-  </script>
+  <%= javascript_include_tag 'application' %>
 </body>
 </html>
